appId: com.bridgething.gateway
---
- launchApp:
    clearState: true
- tapOn:
    text: "Don't show again"
    optional: true
- tapOn:
    text: "Wait"
    optional: true
- extendedWaitUntil:
    visible: "skip for now|continue"
    timeout: 180000
- repeat:
    times: 8
    while:
      notVisible: "open bridgething"
    commands:
      - runFlow:
          when:
            visible: "skip for now"
          commands:
            - tapOn:
                text: "skip for now"
                optional: true
      - runFlow:
          when:
            visible: "continue"
          commands:
            - tapOn:
                text: "continue"
                optional: true
      - runFlow:
          when:
            visible: "skip"
          commands:
            - tapOn:
                text: "skip"
                optional: true
      - runFlow:
          when:
            visible: "not now"
          commands:
            - tapOn:
                text: "not now"
                optional: true
- extendedWaitUntil:
    visible: "open bridgething"
    timeout: 180000
- tapOn: "open bridgething"
- extendedWaitUntil:
    visible: ".*dev gateway.*"
    timeout: 180000
- extendedWaitUntil:
    visible: ".*dev gateway, connected.*"
    timeout: 180000
- runFlow: dismiss-logbox.yaml
